--- a/media/davewhipp-print.css
+++ b/media/davewhipp-print.css
@@ -3,6 +3,11 @@
    License: none (public domain)
 */
 
+@font-face {
+	font-family: 'Actor';
+	src:  url('../Actor-Regular.ttf') format('ttf');
+  }
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -55,7 +60,7 @@ body {
 	font-size: 11pt;
 	line-height: 1.35em;
 	/*also written as...  font: normal normal 400 100%/1.5em;*/
-	font-family: Helvetica Neue, Avenir, Verdana, sans-serif;
+	font-family: Actor, Avenir, Verdana, sans-serif;
 	/*margin-top: 1em;
 	margin-left: 1em;*/
 }
@@ -98,7 +103,7 @@ ul {
 	position: relative;
 	left: 25%;
 	width: 75%;
-	margin-bottom: 1em;
+	margin-bottom: 0.5em;
 	/*margin-top: -0.5em;*/
 }
 
