--- a/media/davewhipp-screen.css
+++ b/media/davewhipp-screen.css
@@ -3,6 +3,8 @@
    License: none (public domain)
 */
 
+@import url('//fonts.googleapis.com/css2?family=Actor&display=swap');
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -55,7 +57,7 @@ body {
 	font-size: 13pt;
 	line-height: 1.75em;
 	/*also written as...  font: normal normal 400 100%/1.5em;*/
-	font-family: Helvetica Neue, Verdana, sans-serif;
+	font-family: Actor, Verdana, sans-serif;
 	margin-top: 2em;
 	margin-left: 2em;
 }
@@ -95,7 +97,7 @@ ul {
 	position: relative;
 	left: 25%;
 	width: 75%;
-	margin-bottom: 1.5em;
+	margin-bottom: 0.5em;
 	margin-top: -0.5em;
 }
 
