--- a/media/davewhipp-screen.css
+++ b/media/davewhipp-screen.css
@@ -54,8 +54,8 @@ table {
 
 body {
 	font: normal normal 400;
-	font-size: 13pt;
-	line-height: 1.75em;
+	font-size: 14pt;
+	line-height: 2em;
 	/*also written as...  font: normal normal 400 100%/1.5em;*/
 	font-family: Actor, Verdana, sans-serif;
 	margin-top: 2em;
@@ -133,7 +133,8 @@ h1 {
 	font-size: 4em;
 	line-height: 2em;
 	position: relative;
-	left: 25%;
+	margin-top: 0;
+	margin-bottom: 0;
 }
 
 h1+p {
@@ -146,9 +147,10 @@ h2 {
 	font-size: 2.5em;
 	line-height: 1.25em;
 	color: #2a4;
-	margin-top: 3em;
+	margin-top: 1.5em;
+	margin-bottom: 0.5em;
 	position: relative;
-	top: 1.4em;
+	top: 1.5em;
 	text-align: right;
 	width: 20%;
 }
@@ -157,9 +159,10 @@ h2 {
 	font-size: 2.5em;
 	line-height: 1.25em;
 	color: #2a4;
-	margin-top: 1em;
+	margin-top: 1.5em;
+	margin-bottom: 0.5em;
 	position: relative;
-	top: 1.4em;
+	top: 1.5em;
 	text-align: right;
 	width: 20%;
 }
