--- a/media/davewhipp-print.css
+++ b/media/davewhipp-print.css
@@ -80,6 +80,7 @@ p {
 	position: relative;
 	left: 0;
 	margin-bottom: 0.2em;
+	margin-left: 0;
 	margin-right: 0;
 	width: 60%;	
 }
@@ -129,6 +130,7 @@ li ul {
 }
 
 h1,h2,h3,h4 {
+	color: #2a4;
 	font-weight: 200;
 	font-family: Helvetica Neue, Avenir, Cousine, Verdana, sans-serif;
 	width: 80%;
@@ -152,7 +154,6 @@ h1+p {
 h2 {
 	font-size: 2.0em;
 	line-height: 1.25em;
-	color: #2a4;
 	margin-top: 1.5em;
 	margin-bottom: 0.5em;
 	position: relative;
@@ -164,7 +165,6 @@ h2 {
 .header h2 {
 	font-size: 2.0em;
 	line-height: 1.25em;
-	color: #2a4;
 	margin-top: 1.5em;
 	margin-bottom: 0.5em;
 	position: relative;
