--- a/media/davewhipp-screen.css
+++ b/media/davewhipp-screen.css
@@ -134,6 +134,7 @@ h1,h2,h3,h4 {
 }
 
 h1 {
+	font-weight: 100;
 	text-align: left;
 	font-size: 4em;
 	line-height: 2em;
@@ -144,15 +145,16 @@ h1 {
 
 h1+p {
 	/*subtitle*/
+	font-weight: 100;
 	font-style: italic;
 	font-size: 110%;
 }
 
 h2 {
 	font-size: 2.5em;
-	line-height: 1.25em;
-	margin-top: 1.5em;
-	margin-bottom: 0.5em;
+	line-height: 1.0em;
+	margin-top: 1.25em;
+	margin-bottom: 0.75em;
 	position: relative;
 	top: 1.5em;
 	text-align: right;
@@ -161,9 +163,9 @@ h2 {
 
 .header h2 {
 	font-size: 2.5em;
-	line-height: 1.25em;
-	margin-top: 1.5em;
-	margin-bottom: 0.5em;
+	line-height: 1.0em;
+	margin-top: 1.25em;
+	margin-bottom: 0.75em;
 	position: relative;
 	top: 1.5em;
 	text-align: right;
