--- a/media/davewhipp-print.css
+++ b/media/davewhipp-print.css
@@ -56,8 +56,8 @@ body {
 	line-height: 1.125em;
 	/*also written as...  font: normal normal 400 100%/1.5em;*/
 	font-family: ETH Light, Avenir, Verdana, sans-serif;
-	/*margin-top: 1em;
-	margin-left: 1em;*/
+	margin-top: 2em;
+	margin-left: 2em;
 }
 
 p {
@@ -70,7 +70,7 @@ p {
 }
 
 .header {
-	background-color: rgb(200,225,250);
+	background-color: rgb(224,234,254);
 }
 
 .header p {
